# Vigil

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: index.ts  package.json
apps/api/db/: index.ts
apps/api/db/schema/: index.ts
apps/dashboard/: package.json
apps/dashboard/app/: layout.tsx  page.tsx
apps/parser/: go.mod  main.go
apps/scanner/: Cargo.toml
apps/scanner/src/: main.rs
apps/scanner/src/domain/: models.rs
docs/: architecture.md
infrastructure/migrations/: 001_initial_schema.sql
