[package]
name = "vigil-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Soroban & Stellar
soroban-sdk = "20.0.0"
stellar-rpc-client = "0.2.0"
stellar-xdr = "20.0.0"
stellar-base = "0.4.0"

# Async & Networking
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
deadpool-postgres = "0.12"

# Serialization & Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
